# python-project-52

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: task_manager.yml
docker_compose/: app.yaml
task_manager/: filters.py  mixins.py  settings.py  urls.py  views.py
task_manager/api/: schemas.py  urls.py
task_manager/api/v1/: urls.py
task_manager/apps/labels/: admin.py  entities.py  forms.py  models.py  urls.py  views.py
task_manager/apps/statuses/: admin.py  entities.py  forms.py  models.py  urls.py  views.py
task_manager/apps/tasks/: admin.py  entities.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/users/: admin.py  entities.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  index.html  navbar.html
task_manager/templates/auth/: login.html
task_manager/templates/labels/: create_label.html  delete_label.html  labels.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  statuses.html  update_status.html
task_manager/templates/tasks/: create_task.html  current_task.html  delete_task.html  tasks.html  update_task.html
task_manager/templates/users/: create_user.html  delete_user.html  update_user.html  users.html
task_manager/tests/: test_status.py  test_user.py
task_manager/tests/django_tests/: test_auth.py  test_label.py  test_main.py  test_main_page.py  test_status.py  test_task.py  test_user.py
(+23 files in other folders)
